--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
            
 
         <!-- lohitha -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-4">
                 <img src="images/lohitha.jpeg" alt="" class="img-thumbnail" id="lohitha" style="width: 300px;height: 300px;">
                 <div class="wish-lohitha wishes">
                     <strong>  Birthday wishes from lohitha</strong>
@@ -106,7 +106,7 @@
             </div>
 
             <!-- tejaaaa -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-4">
                 <img src="images/teja.jpeg" alt="" class="img-thumbnail" id="teja" style="width: 300px;height: 300px;">
                 <div class="wish-teja wishes">
                     <strong>  Birthday wishes from Teja</strong>
@@ -116,7 +116,7 @@
 
              <!-- lakshmiiii -->
 
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-4">
                 <img src="images/lakshmi.jpeg" alt="" class="img-thumbnail" id="lakshmi" style="width: 300px;height: 300px;">
                 <div class="wish-lakshmi wishes">
                     <strong>  Birthday wishes from lakshmi</strong>
