--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- Kundana -->
 
             <div class="col-lg-4 col-sm-4 img-thumbnail" >
-                <img src="images/kunni.jpeg" alt="" class="img-thumbnail" id="kunni" style="width: 300px;height: 300px;">
+                <img src="images/kunni.jpeg" alt="" class="img-thumbnail img-fluid" id="kunni" style="width: 300px;height: 300px;">
                 <div class="wish-kunni wishes">
                   <strong>  Birthday wishes from Kundana</strong>
                 </div>
@@ -41,7 +41,7 @@
                    <!-- balaji -->
 
                    <div class="col-lg-4 col-sm-4 img-thumbnail" >
-                    <img src="images/balaji.jpeg" alt="" class="img-thumbnail" id="balaji" style="width: 300px;height: 300px;">
+                    <img src="images/balaji.jpeg" alt="" class="img-thumbnail img-fluid" id="balaji" style="width: 300px;height: 300px;">
                     <div class="wish-balaji wishes">
                     <strong>  Birthday wishes from balaji</strong>
                 </div>
@@ -50,7 +50,7 @@
             <!-- sriharini -->
 
             <div class="col-lg-4 col-sm-4 img-thumbnail" >
-                <img src="images/sriharini.jpeg" alt="" class="img-thumbnail" id="sriharini" style="width: 300px;height: 300px;">
+                <img src="images/sriharini.jpeg" alt="" class="img-thumbnail img-fluid" id="sriharini" style="width: 300px;height: 300px;">
                 <div class="wish-sriharini wishes">
                 <strong>  Birthday wishes from sriharini</strong>
             </div>
@@ -59,15 +59,15 @@
 
 <!-- amma pic is assigned here -->
 
-               <div id="amma";   class="col-lg-4 col-sm-4">
-                <img src="amma.jpeg" id="mom" style="width: 300px;height: 300px;">
+               <div id="amma";   class="col-lg-4 col-sm-4 img-fluid">
+                <img src="images/amma.jpeg" id="mom" style="width: 300px;height: 300px;">
                </div>
 
                <!-- ends here -->
 
                <!-- Susmitha -->
                <div class="col-lg-4 col-sm-4 img-thumbnail" >
-                <img src="images/sush.jpeg" alt="" style="width: 300px;height: 300px;" id="sush" class="img-thumbnail">
+                <img src="images/sush.jpeg" alt="" style="width: 300px;height: 300px;" id="sush" class="img-thumbnail img-fluid">
                 <div class="wish-sush wishes">
                 <strong>  Birthday wishes from Susmitha</strong>
             </div>
@@ -75,7 +75,7 @@
 
             <!-- pavan -->
             <div class="col-lg-4 col-sm-4 img-thumbnail" >
-                <img src="images/pavan.jpeg" alt="" style="width: 300px;height: 300px;" id="pavan" class="img-thumbnail">
+                <img src="images/pavan.jpeg" alt="" style="width: 300px;height: 300px;" id="pavan" class="img-thumbnail img-fluid">
                 <div class="wish-pavan wishes">
                 <strong>  Birthday wishes from pavan</strong>
             </div>
@@ -83,7 +83,7 @@
 
 <!-- priya -->
             <div class="col-lg-4 col-sm-4 img-thumbnail" >
-                <img src="images/priya.jpeg" alt="" class="img-thumbnail" id="priya" style="width: 300px;height: 300px;">
+                <img src="images/priya.jpeg" alt="" class="img-thumbnail img-fluid" id="priya" style="width: 300px;height: 300px;">
                 <div class="wish-priya wishes">
                 <strong>  Birthday wishes from priya</strong>
             </div>
@@ -92,14 +92,14 @@
             <!-- nikki -->
 
             <div class="col-lg-4 col-sm-4 img-thumbnail" >
-                <img src="images/nikki.jpeg" alt="" class="img-thumbnail" id="nikki" style="width: 300px;height: 300px;">
+                <img src="images/nikki.jpeg" alt="" class="img-thumbnail img-fluid" id="nikki" style="width: 300px;height: 300px;">
                 <strong class="wish-nikki wishes">  Birthday wishes from Nikitha</strong>
             </div>
            
 
         <!-- lohitha -->
             <div class="col-lg-4 col-sm-4">
-                <img src="images/lohitha.jpeg" alt="" class="img-thumbnail" id="lohitha" style="width: 300px;height: 300px;">
+                <img src="images/lohitha.jpeg" alt="" class="img-thumbnail img-fluid" id="lohitha" style="width: 300px;height: 300px;">
                 <div class="wish-lohitha wishes">
                     <strong>  Birthday wishes from lohitha</strong>
                 </div>
@@ -107,7 +107,7 @@
 
             <!-- tejaaaa -->
             <div class="col-lg-4 col-sm-4">
-                <img src="images/teja.jpeg" alt="" class="img-thumbnail" id="teja" style="width: 300px;height: 300px;">
+                <img src="images/teja.jpeg" alt="" class="img-thumbnail img-fluid" id="teja" style="width: 300px;height: 300px;">
                 <div class="wish-teja wishes">
                     <strong>  Birthday wishes from Teja</strong>
                 </div>
@@ -117,7 +117,7 @@
              <!-- lakshmiiii -->
 
             <div class="col-lg-4 col-sm-4">
-                <img src="images/lakshmi.jpeg" alt="" class="img-thumbnail" id="lakshmi" style="width: 300px;height: 300px;">
+                <img src="images/lakshmi.jpeg" alt="" class="img-thumbnail img-fluid" id="lakshmi" style="width: 300px;height: 300px;">
                 <div class="wish-lakshmi wishes">
                     <strong>  Birthday wishes from lakshmi</strong>
                 </div>
