--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <!-- Kundana -->
 
-            <div class="col-lg-4 col-sm-4 img-thumbnail" >
+            <div class="col-lg-4 col-sm-4" >
                 <img src="images/kunni.jpeg" alt="" class="img-thumbnail img-fluid" id="kunni" style="width: 300px;height: 300px;">
                 <div class="wish-kunni wishes">
                   <strong>  Birthday wishes from Kundana</strong>
@@ -31,7 +31,7 @@
 
                  <!-- Vennela -->
 
-                 <div class="col-lg-4 col-sm-4 img-thumbnail" >
+                 <div class="col-lg-4 col-sm-4" >
                     <img src="images/venni.jpeg" alt="" class="img-thumbnail" id="venni" style="width: 300px;height: 300px;">
                     <div class="wish-venni wishes">
                     <strong>  Birthday wishes from Vennela</strong>
@@ -40,7 +40,7 @@
 
                    <!-- balaji -->
 
-                   <div class="col-lg-4 col-sm-4 img-thumbnail" >
+                   <div class="col-lg-4 col-sm-4" >
                     <img src="images/balaji.jpeg" alt="" class="img-thumbnail img-fluid" id="balaji" style="width: 300px;height: 300px;">
                     <div class="wish-balaji wishes">
                     <strong>  Birthday wishes from balaji</strong>
@@ -49,7 +49,7 @@
 
             <!-- sriharini -->
 
-            <div class="col-lg-4 col-sm-4 img-thumbnail" >
+            <div class="col-lg-4 col-sm-4" >
                 <img src="images/sriharini.jpeg" alt="" class="img-thumbnail img-fluid" id="sriharini" style="width: 300px;height: 300px;">
                 <div class="wish-sriharini wishes">
                 <strong>  Birthday wishes from sriharini</strong>
@@ -66,7 +66,7 @@
                <!-- ends here -->
 
                <!-- Susmitha -->
-               <div class="col-lg-4 col-sm-4 img-thumbnail" >
+               <div class="col-lg-4 col-sm-4" >
                 <img src="images/sush.jpeg" alt="" style="width: 300px;height: 300px;" id="sush" class="img-thumbnail img-fluid">
                 <div class="wish-sush wishes">
                 <strong>  Birthday wishes from Susmitha</strong>
@@ -74,7 +74,7 @@
             </div>
 
             <!-- pavan -->
-            <div class="col-lg-4 col-sm-4 img-thumbnail" >
+            <div class="col-lg-4 col-sm-4" >
                 <img src="images/pavan.jpeg" alt="" style="width: 300px;height: 300px;" id="pavan" class="img-thumbnail img-fluid">
                 <div class="wish-pavan wishes">
                 <strong>  Birthday wishes from pavan</strong>
@@ -82,7 +82,7 @@
             </div>  
 
 <!-- priya -->
-            <div class="col-lg-4 col-sm-4 img-thumbnail" >
+            <div class="col-lg-4 col-sm-4" >
                 <img src="images/priya.jpeg" alt="" class="img-thumbnail img-fluid" id="priya" style="width: 300px;height: 300px;">
                 <div class="wish-priya wishes">
                 <strong>  Birthday wishes from priya</strong>
@@ -91,7 +91,7 @@
          
             <!-- nikki -->
 
-            <div class="col-lg-4 col-sm-4 img-thumbnail" >
+            <div class="col-lg-4 col-sm-4" >
                 <img src="images/nikki.jpeg" alt="" class="img-thumbnail img-fluid" id="nikki" style="width: 300px;height: 300px;">
                 <strong class="wish-nikki wishes">  Birthday wishes from Nikitha</strong>
             </div>
